--- a/src/frontend/sass/_main.scss
+++ b/src/frontend/sass/_main.scss
@@ -7,6 +7,7 @@
   box-sizing: border-box;
 }
 html {
+  font-size: 15.2px;
   height: 100svh;
   scroll-behavior: smooth;
   scrollbar-color: v.$pm1 v.$px2;
